--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,4 +1,4 @@
-footer
+footer.footer
   .footer-lows
     .footer-low
       = link_to tos_path, class: 'footer-text'
@@ -7,5 +7,5 @@ footer
       = link_to policy_path, class: 'footer-text'
         | プライバシーポリシー
   .footer-lows
-    .copyright-item
+    small.copyright-item
       | ©️  2021 gallardo16
