--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,5 +1,78 @@
+.auth-header {
+  font-size: 54px;
+  padding-top: .75em;
+  line-height: 1;
+  @media (max-width: 767.98px) {
+    font-size: 32px;
+  }
+}
+
+.auth-header__logo {
+  text-align: center;
+}
+
+.auth-header__site-name {
+  color: #1E90FF;
+  font-size: 54px;
+  text-decoration: none;
+  font-family: 'Karla', sans-serif;
+  @media (max-width: 767.98px) {
+    font-size: 38px;
+  }
+  i {
+    margin-right: .125em;
+  }
+  &:hover{
+    color: #1E90FF;
+    text-decoration: none;
+  }
+}
+
+.auth-header__title {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1.4;
+  margin-top: 32px;
+  margin-bottom: 0;
+  @media (max-width: 767.98px) {
+    margin-top: 24px;
+    font-size: 22px;
+  }
+}
+
+
+.card-body {
+  form {
+    @media (min-width: 768px) {
+      display: block;
+      padding: 16px;
+    }
+  }
+}
+
 .form-item{
-  margin-top: 24px;
+  &:not(:first-child) {
+    margin-top: 24px;
+  }
+  &.is-mt-sm {
+    margin-top: 16px;
+  }
+  &.is-mt-xs {
+    margin-top: 12px;
+  }
+  &.is-ta-right {
+    text-align: right;
+  }
+  label {
+  }
+}
+
+.form-label {
+  display: block;
+  font-size: 14px;
+  line-height: 1.4;
+  font-weight: 600;
+  margin-bottom: 6px;
 }
 
 .form-name-input,
@@ -10,43 +83,35 @@
   width: 100%;
 }
 
-.btn-position{
+.form-btn{
+  width: 100%;
+  height: 44px;
   display: flex;
   justify-content: center;
-}
-
-.form-btn{
-  margin-top: 40px;
-  width: 384px;
+  align-items: center;
+  padding: 0;
 }
 
 .create-btn,
-.login-btn{
-  color: #FFF;
+.login-btn,
+.send-mail-btn {
+  color: #fff;
   background: #1E90FF;
   border: 1px solid #1d81e2;
-  font-size: 20px;
   font-weight: 600;
-  letter-spacing: 2px;
+  &:hover {
+    color: #fff;
+  }
 }
 
-.create-btn:hover,
-.login-btn:hover{
-  color: #FFF;
-}
-
-.update-btn,
-.send-mail-btn{
+.update-btn {
   background: #fabd17;
   border: 1px solid #efb61b;
-  font-size: 18px;
   font-weight: 600;
-  letter-spacing: 2px;
 }
 
 .cansel-btn{
   font-weight: 600;
-  letter-spacing: 2px;
   border: 1px solid #BBB;
 }
 
@@ -58,18 +123,35 @@
   .form-password-input{
     width: 100%;
   }
+}
 
-  .form-btn{
-    width: 100%;
+.form-item input[type="checkbox"] + label {
+  margin-left: .25em;
+}
+
+.link-items__item {
+  margin-top: 1em;
+  text-align: center;
+}
+
+.form-actions {
+  margin-top: 24px;
+  @media (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    margin-left: -8px;
+    margin-right: -8px;
   }
+}
 
-  .create-btn,
-  .login-btn{
-    font-size: 18px;
+.form-actions__item {
+  @media (min-width: 768px) {
+    padding: 0 8px;
+    width: 50%;
   }
-
-  .update-btn,
-  .send-mail-btn{
-    font-size: 18px;
+  @media (max-width: 767.98px) {
+    &:not(:first-child) {
+      margin-top: 12px;
+    }
   }
 }
