--- a/app/views/devise/confirmations/new.html.slim
+++ b/app/views/devise/confirmations/new.html.slim
@@ -1,13 +1,25 @@
-.page-title
-  | アカウント確認メール再送
+- content_for(:header, 'no')
+
+header.auth-header
+  .container
+    .auth-header__logo
+      = link_to supplements_path, class: 'auth-header__site-name' do
+        i.fas.fa-pills
+        | Resupple
+    h1.auth-header__title.is-centered
+      | アカウント確認メール再送
 .main-items
-  .form-items
-    = form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
-      = render "devise/shared/error_messages", resource: resource
-      .form-item
-        = f.label :email
-        .form-email-input
-          = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email)
-      .btn-position
-        = f.submit 'メールを送信する', class: 'btn form-btn'
-    = render "devise/shared/links"
+  .container.is-sm
+    .card
+      .card-body
+        = form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
+          = render "devise/shared/error_messages", resource: resource
+          .form-items
+            .form-item
+              = f.label :email, class: 'form-label'
+              .form-email-input
+                = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email)
+          .form-actions
+            .form-actions__item
+              = f.submit 'メールを送信する', class: 'btn form-btn'
+          = render "devise/shared/links"
