--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,34 +1,35 @@
-.page-title
-  | プロフィール編集
+.page-header
+  .container
+    h1.page-header__title
+      | 登録情報編集
 .main-items
-  .form-items
+  .container.is-sm
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-      = render "devise/shared/error_messages", resource: resource
-      .form-item
-        = f.label :email
-        .form-email-input
-          = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email'
-      .form-item
-        = f.label :password, '新しいパスワード(6文字以上)'
-        .form-password-input
-          = f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password'
-      .form-item
-        = f.label :password_confirmation, '新しいパスワード(確認用)'
-        .form-password-input
-          = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation'
-      .form-item
-        = f.label :current_password, '現在のパスワード(変更を保存する場合)'
-        .form-password-input
-          = f.password_field :current_password, autocomplete: "current-password", class: 'form-control', id: 'current_password'
-      .btn-position
-        = f.submit '更新する', class: ' btn form-btn update-btn'
-      .btn-position
-        = link_to t('devise.shared.links.back'), :back, class: 'btn form-btn cansel-btn'
+      .form-items
+        = render "devise/shared/error_messages", resource: resource
+        .form-item
+          = f.label :email, class: 'form-label'
+          .form-email-input
+            = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email'
+        .form-item
+          = f.label :password, '新しいパスワード(6文字以上)', class: 'form-label'
+          .form-password-input
+            = f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password'
+        .form-item
+          = f.label :password_confirmation, '新しいパスワード(確認用)', class: 'form-label'
+          .form-password-input
+            = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation'
+        .form-item
+          = f.label :current_password, '現在のパスワード(変更を保存する場合)', class: 'form-label'
+          .form-password-input
+            = f.password_field :current_password, autocomplete: "current-password", class: 'form-control', id: 'current_password'
+      .form-actions
+        .form-actions__item
+          = f.submit '更新する', class: ' btn form-btn update-btn'
+        .form-actions__item
+          = link_to t('devise.shared.links.back'), :back, class: 'btn form-btn cansel-btn'
 
-  .danger-items
-    .danger-title
-      strong アカウントの削除
-    .destroy-items
-      .destroy-desc
+    .danger-items
+      = link_to 'アカウントを削除', registration_path(resource_name), data: { confirm: '本当によろしいですか？' }, method: :delete, class: 'danger-items__link'
+      .danger-items__description
         | アカウントを削除すると、登録データも全て削除されます。
-      = button_to '削除する', registration_path(resource_name), data: { confirm: '本当によろしいですか？' }, method: :delete, class: 'btn destroy-btn'
