--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,21 +1,33 @@
-.page-title
-  | アカウント登録
+- content_for(:header, 'no')
+
+header.auth-header
+  .container
+    .auth-header__logo
+      = link_to supplements_path, class: 'auth-header__site-name' do
+        i.fas.fa-pills
+        | Resupple
+    h1.auth-header__title.is-centered
+      | アカウント登録
 .main-items
-  .form-items
-    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      = render "devise/shared/error_messages", resource: resource
-      .form-item
-        = f.label :email
-        .form-email-input
-          = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email'
-      .form-item
-        = f.label :password, 'パスワード(6文字以上)'
-        .form-password-input
-          = f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password'
-      .form-item
-        = f.label :password_confirmation
-        .form-password-input
-          = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation'
-      .btn-position
-        = f.submit '登録する', class: 'btn form-btn create-btn'
-  = render "devise/shared/links"
+  .container.is-sm
+    = render "devise/shared/error_messages", resource: resource
+    .card
+      .card-body
+        = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+          .form-items
+            .form-item
+              = f.label :email, class: 'form-label'
+              .form-email-input
+                = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email'
+            .form-item
+              = f.label :password, 'パスワード(6文字以上)', class: 'form-label'
+              .form-password-input
+                = f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password'
+            .form-item
+              = f.label :password_confirmation, class: 'form-label'
+              .form-password-input
+                = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation'
+          .form-actions
+            .form-actions__item
+              = f.submit '登録する', class: 'btn form-btn create-btn'
+          = render "devise/shared/links"
