--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -1,10 +1,10 @@
 .link-items
   - if controller_name != 'sessions'
-    .link-item
+    .link-items__item
       = link_to 'ログインはこちら', new_session_path(resource_name)
   - if devise_mapping.registerable? && controller_name != 'registrations'
-    .link-item
+    .link-items__item
       = link_to 'アカウント登録はこちら', new_registration_path(resource_name)
   - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
-    .link-item
+    .link-items__item
       = link_to 'パスワードをお忘れの方', new_password_path(resource_name)
