--- a/app/views/supplements/new.html.slim
+++ b/app/views/supplements/new.html.slim
@@ -1,4 +1,7 @@
-.page-title
-  | サプリメント追加
+.page-header
+  .container
+    h1.page-header__title
+      | サプリメント追加
 .main-items
-  = render partial: 'form', locals: { supplement: @supplement }
+  .container.is-sm
+    = render partial: 'form', locals: { supplement: @supplement }
