--- a/app/assets/stylesheets/supplements/index.scss
+++ b/app/assets/stylesheets/supplements/index.scss
@@ -274,3 +274,94 @@
     padding: 8px;
   }
 }
+
+.js-accordion{
+  border: 1px solid #ccc;
+  border-radius: 4px;
+    &:not(:last-child) {
+      margin-bottom: 16px;
+    }
+    @media (max-width: 767.98px) {
+      margin-bottom: 8px;
+    }
+  &--trigger{
+    background: #FFF;
+    position: relative;
+    display: block;
+    width: 100%;
+    transition: all 0.2s ease-in;
+    text-align: left;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    padding: 12px 16px;
+      @media (max-width: 767.98px) {
+        padding: 10px 12px;
+      }
+    &:after{
+      display: inline-block;
+      width: 0;
+      height: 0;
+      border: solid transparent;
+      content: "";
+      border-top-color: #AAA;
+      border-width: 7px;
+      position: absolute;
+      top: 50%;
+      right: 1em;
+      margin-top: -5px;
+      transition: all 0.2s ease-in;
+    }
+    &._state-open{
+      background-color: #f1f7fd;
+      text-decoration: none;
+      &:after{
+        transform:rotateX(180deg);
+        margin-top: -10px;
+      }
+    }
+    &:hover{
+      text-decoration: none;
+      border-color: #a8d1f9;
+    }
+  }
+  &--target{
+    overflow: hidden;
+    transition: 0.4s ease-in-out;
+    border-top: 1px dashed #a8d1f9;
+    background-color: #f1f7fd;
+    border-color: #a8d1f9;
+
+  }
+  &--body{
+    padding: 30px;
+  }
+  &-enter-active{
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-name: js-accordion--anime__opend;
+  }
+  &-leave-active{
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-name: js-accordion--anime__closed;
+  }
+}
+
+@keyframes js-accordion--anime__opend {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+   }
+}
+@keyframes js-accordion--anime__closed {
+  0% {
+   opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
