--- a/app/views/supplements/_form.html.slim
+++ b/app/views/supplements/_form.html.slim
@@ -39,3 +39,7 @@
       = f.submit nil, class: 'btn form-btn create-btn' do
     .form-actions__item
       = link_to 'キャンセル', supplements_path, class: 'btn form-btn cansel-btn'
+    - if request.path != '/supplements/new'
+      .form-actions__item
+        =link_to supplement_path(supplement), method: :delete, data: { confirm: "サプリメント「#{supplement.name}」を削除します。"}, class: 'btn btn-supplement-destroy'
+          i class="fas fa-trash"
