--- a/app/views/tos/index.html.slim
+++ b/app/views/tos/index.html.slim
@@ -29,11 +29,11 @@
         |その他，当サイトが利用登録を相当でないと判断した場合
 
     .doc-headline
-      |3. ユーザーIDおよびパスワードの管理
+      |3. メールアドレスおよびパスワードの管理
     .doc-desc
-      |ユーザーは，自己の責任において，本サービスのユーザーIDおよびパスワードを適切に管理するものとします。ユーザーは，いかなる場合にも，ユーザーIDおよびパスワードを第三者に譲渡または貸与し，もしくは第三者と共用することはできません。当サイトは，ユーザーIDとパスワードの組み合わせが登録情報と一致してログインされた場合には，そのユーザーIDを登録しているユーザー自身による利用とみなします。
+      |ユーザーは，自己の責任において，本サービスのメールアドレスおよびパスワードを適切に管理するものとします。ユーザーは，いかなる場合にも，メールアドレスおよびパスワードを第三者に譲渡または貸与し，もしくは第三者と共用することはできません。当サイトは，メールアドレスとパスワードの組み合わせが登録情報と一致してログインされた場合には，そのメールアドレスを登録しているユーザー自身による利用とみなします。
     .doc-desc
-      |ユーザーID及びパスワードが第三者によって使用されたことによって生じた損害は，当サイトに故意又は重大な過失がある場合を除き，当サイトは一切の責任を負わないものとします。
+      |メールアドレス及びパスワードが第三者によって使用されたことによって生じた損害は，当サイトに故意又は重大な過失がある場合を除き，当サイトは一切の責任を負わないものとします。
 
     .doc-headline
       |4. 利用料金および支払方法
